# rps-game

./:  README.md  .pre-commit-config.yaml  DOCS.md  pyproject.toml
app/: .gitignore  main.py  routes.py  schemas.py  services.py  settings.py  test_main.py
app/docs/: RUN.md
docs/: API.md  RUN.md
test/: conftest.py  get_message_from_game_result.py  test_get_request.py  test_post_request.py
tests/: test_get_game_result.py  test_get_message_from_game_result.py  test_get_request.py  test_post_request.py
